Fix for DCHECK on SmbService initialization

This removes the initialization of TempFileManager in SmbService.
With this change, Mount will be in a broken state and will be fixed in a
future CL.

Bug: 837492
Change-Id: I07689fd5a19e2bf56aac5d2f6cd9085d2352dcad
Reviewed-on: https://chromium-review.googlesource.com/1040678
Commit-Queue: Allen Vicencio <allenvic@chromium.org>
Commit-Queue: Zentaro Kavanagh <zentaro@chromium.org>
Reviewed-by: Zentaro Kavanagh <zentaro@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555570}
Former-commit-id: d6e03f2b8ae7ac22a65dffcbebe979ec5eea5339